flambda-backend/tests/backend/zero_alloc_checker/test_arity.output
File "test_arity.ml", line 9, characters 5-15:
Error: Annotation check for zero_alloc failed on function Test_arity.f_not_zero_alloc (camlTest_arity.f_not_zero_alloc_HIDE_STAMP)

File "test_arity.ml", line 10, characters 18-23:
Error: allocation of 24 bytes

File "test_arity.ml", line 10, characters 29-34:
Error: allocation of 24 bytes
